--- a/_config.yml
+++ b/_config.yml
@@ -80,13 +80,13 @@ analytics:
 
 # Site Author
 author:
-  name             : "Yue Wang"
+  name             : "Yue Wang 王 越"
   avatar           : "profile.png"
   bio              : "Research Fellow at Shenzhen Institute of Computing Sciences"
-  location         : "Shen Zhen"
+  location         : "Shenzhen, China"
   employer         :
   pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  googlescholar    : "http://yourfullgooglescholarurl.com"
+  googlescholar    : "https://scholar.google.com.hk/citations?user=Rx1RmHMAAAAJ&hl=en"
   email            :
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
