--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Yue Wang 王 越"
-  avatar           : "profile.png"
+  avatar           : "yue_wang_small.jpg"
   bio              : "Research Fellow at Shenzhen Institute of Computing Sciences"
   location         : "Shenzhen, China"
   employer         :
